add_subdirectory( VoFSolver )
add_subdirectory( XiFluid )
add_subdirectory( compressibleMultiphaseVoF )
add_subdirectory( compressibleVoF )
add_subdirectory( film )
add_subdirectory( fluid )
add_subdirectory( fluidSolver )
add_subdirectory( functions )
add_subdirectory( incompressibleDenseParticleFluid )
add_subdirectory( incompressibleDriftFlux )
add_subdirectory( incompressibleFluid )
add_subdirectory( incompressibleMultiphaseVoF )
add_subdirectory( incompressibleVoF )
add_subdirectory( isothermalFilm )
add_subdirectory( isothermalFluid )
add_subdirectory( movingMesh )
add_subdirectory( multicomponentFluid )
add_subdirectory( multiphaseEuler )
add_subdirectory( multiphaseVoFSolver )
add_subdirectory( shockFluid )
add_subdirectory( solid )
add_subdirectory( solidDisplacement )
add_subdirectory( twoPhaseSolver )
add_subdirectory( twoPhaseVoFSolver )