add_library( dynamicMesh )
target_link_libraries( dynamicMesh
  PRIVATE
  OpenFOAM
  meshTools

  PUBLIC
  finiteVolume
)
target_include_directories( dynamicMesh
  PUBLIC
  .
)
target_sources( dynamicMesh
  PRIVATE
  attachDetach/attachDetach.C
  attachDetach/attachDetachPointMatchMap.C
  attachDetach/attachInterface.C
  attachDetach/detachInterface.C
  createShellMesh/createShellMesh.C
  fvMeshAdder/fvMeshAdder.C
  fvMeshDistribute/fvMeshDistribute.C
  fvMeshSubset/fvMeshSubset.C
  fvMeshTools/fvMeshTools.C
  layerAdditionRemoval/addCellLayer.C
  layerAdditionRemoval/layerAdditionRemoval.C
  layerAdditionRemoval/removeCellLayer.C
  layerAdditionRemoval/setLayerPairing.C
  meshCut/cellCuts/cellCuts.C
  meshCut/cellLooper/cellLooper.C
  meshCut/cellLooper/geomCellLooper.C
  meshCut/cellLooper/hexCellLooper.C
  meshCut/cellLooper/topoCellLooper.C
  meshCut/directions/directionInfo/directionInfo.C
  meshCut/directions/directions.C
  meshCut/edgeVertex/edgeVertex.C
  meshCut/meshModifiers/boundaryCutter/boundaryCutter.C
  meshCut/meshModifiers/meshCutAndRemove/meshCutAndRemove.C
  meshCut/meshModifiers/meshCutter/meshCutter.C
  meshCut/meshModifiers/multiDirRefinement/multiDirRefinement.C
  meshCut/meshModifiers/refinementIterator/refinementIterator.C
  meshCut/meshModifiers/undoableMeshCutter/undoableMeshCutter.C
  meshCut/refineCell/refineCell.C
  meshCut/splitCell/splitCell.C
  meshCut/wallLayerCells/wallLayerCells.C
  meshCut/wallLayerCells/wallNormalInfo/wallNormalInfo.C
  motionSmoother/badQualityToCell/badQualityToCell.C
  motionSmoother/badQualityToFace/badQualityToFace.C
  motionSmoother/dynamicMeshCheck/dynamicMeshCheck.C
  motionSmoother/motionSmoother.C
  motionSmoother/motionSmootherAlgo.C
  motionSmoother/motionSmootherAlgoCheck.C
  motionSmoother/motionSmootherData.C
  motionSolvers/componentDisplacement/componentDisplacementMotionSolver.C
  motionSolvers/componentVelocity/componentVelocityMotionSolver.C
  motionSolvers/displacement/displacement/displacementMotionSolver.C
  motionSolvers/displacement/layeredSolver/displacementLayeredMotionMotionSolver.C
  motionSolvers/displacement/layeredSolver/pointEdgeStructuredWalk.C
  motionSolvers/displacement/linearSolver/displacementLinearMotionMotionSolver.C
  motionSolvers/displacement/points0/points0MotionSolver.C
  motionSolvers/displacement/solidBody/interpolatingSolidBodyMotionSolver/interpolatingSolidBodyMotionSolver.C
  motionSolvers/displacement/solidBody/multiSolidBodyMotionSolver/multiSolidBodyMotionSolver.C
  motionSolvers/displacement/solidBody/pointPatchFields/derived/solidBodyMotionDisplacement/solidBodyMotionDisplacementPointPatchVectorField.C
  motionSolvers/displacement/solidBody/solidBodyMotionFunctions/SDA/SDA.C
  motionSolvers/displacement/solidBody/solidBodyMotionFunctions/axisRotationMotion/axisRotationMotion.C
  motionSolvers/displacement/solidBody/solidBodyMotionFunctions/linearMotion/linearMotion.C
  motionSolvers/displacement/solidBody/solidBodyMotionFunctions/multiMotion/multiMotion.C
  motionSolvers/displacement/solidBody/solidBodyMotionFunctions/oscillatingLinearMotion/oscillatingLinearMotion.C
  motionSolvers/displacement/solidBody/solidBodyMotionFunctions/oscillatingRotatingMotion/oscillatingRotatingMotion.C
  motionSolvers/displacement/solidBody/solidBodyMotionFunctions/rotatingMotion/rotatingMotion.C
  motionSolvers/displacement/solidBody/solidBodyMotionFunctions/sixDoFMotion/sixDoFMotion.C
  motionSolvers/displacement/solidBody/solidBodyMotionFunctions/solidBodyMotionFunction/solidBodyMotionFunction.C
  motionSolvers/displacement/solidBody/solidBodyMotionFunctions/solidBodyMotionFunction/solidBodyMotionFunctionNew.C
  motionSolvers/displacement/solidBody/solidBodyMotionSolver/solidBodyMotionSolver.C
  motionSolvers/motionSolver/motionSolver.C
  motionSolvers/motionSolverList/motionSolverList.C
  motionSolvers/velocity/velocityMotionSolver.C
  perfectInterface/perfectInterface.C
  pointInterpolator/dynamicMeshPointInterpolator.C
  pointPatchDist/externalPointEdgePoint.C
  pointPatchDist/pointPatchDist.C
  polyMeshAdder/faceCoupleInfo.C
  polyMeshAdder/polyMeshAdder.C
  polyMeshFilter/polyMeshFilter.C
  polyMeshFilter/polyMeshFilterSettings.C
  polyTopoChange/attachPolyTopoChanger/attachPolyTopoChanger.C
  polyTopoChange/polyMeshModifier/polyMeshModifier.C
  polyTopoChange/polyMeshModifier/polyMeshModifierNew.C
  polyTopoChange/polyTopoChange/addPatchCellLayer.C
  polyTopoChange/polyTopoChange/combineFaces.C
  polyTopoChange/polyTopoChange/duplicatePoints.C
  polyTopoChange/polyTopoChange/edgeCollapser.C
  polyTopoChange/polyTopoChange/faceCollapser.C
  polyTopoChange/polyTopoChange/hexRef8/hexRef8.C
  polyTopoChange/polyTopoChange/hexRef8/hexRef8Data.C
  polyTopoChange/polyTopoChange/hexRef8/refinementHistory.C
  polyTopoChange/polyTopoChange/pointEdgeCollapse/pointEdgeCollapse.C
  polyTopoChange/polyTopoChange/polyTopoChange.C
  polyTopoChange/polyTopoChange/refinementData.C
  polyTopoChange/polyTopoChange/refinementDistanceData.C
  polyTopoChange/polyTopoChange/removeCells.C
  polyTopoChange/polyTopoChange/removeFaces.C
  polyTopoChange/polyTopoChange/removePoints.C
  polyTopoChange/polyTopoChange/tetDecomposer.C
  polyTopoChange/polyTopoChange/topoAction/topoActions.C
  polyTopoChange/polyTopoChanger/polyTopoChanger.C
  polyTopoChange/repatchPolyTopoChanger/repatchPolyTopoChanger.C
  repatchMesh/repatchMesh.C
  repatchMesh/repatchPatch.C
  slidingInterface/coupleSlidingInterface.C
  slidingInterface/decoupleSlidingInterface.C
  slidingInterface/enrichedPatch/enrichedPatch.C
  slidingInterface/enrichedPatch/enrichedPatchCutFaces.C
  slidingInterface/enrichedPatch/enrichedPatchFaces.C
  slidingInterface/enrichedPatch/enrichedPatchMasterPoints.C
  slidingInterface/enrichedPatch/enrichedPatchPointMap.C
  slidingInterface/enrichedPatch/enrichedPatchPointPoints.C
  slidingInterface/slidingInterface.C
  slidingInterface/slidingInterfaceAttachedAddressing.C
  slidingInterface/slidingInterfaceClearCouple.C
  slidingInterface/slidingInterfaceProjectPoints.C

  PRIVATE
  FILE_SET HEADERS
  FILES
  attachDetach/attachDetach.H
  createShellMesh/createShellMesh.H
  fvMeshAdder/directPointPatchFieldMapper.H
  fvMeshAdder/fvMeshAdder.H
  fvMeshDistribute/fvMeshDistribute.H
  fvMeshSubset/fvMeshSubset.H
  fvMeshTools/fvMeshTools.H
  layerAdditionRemoval/layerAdditionRemoval.H
  meshCut/cellCuts/cellCuts.H
  meshCut/cellLooper/cellLooper.H
  meshCut/cellLooper/geomCellLooper.H
  meshCut/cellLooper/hexCellLooper.H
  meshCut/cellLooper/topoCellLooper.H
  meshCut/directions/directionInfo/directionInfo.H
  meshCut/directions/directionInfo/directionInfoI.H
  meshCut/directions/directions.H
  meshCut/edgeVertex/edgeVertex.H
  meshCut/meshModifiers/boundaryCutter/boundaryCutter.H
  meshCut/meshModifiers/meshCutAndRemove/meshCutAndRemove.H
  meshCut/meshModifiers/meshCutter/meshCutter.H
  meshCut/meshModifiers/multiDirRefinement/multiDirRefinement.H
  meshCut/meshModifiers/refinementIterator/refinementIterator.H
  meshCut/meshModifiers/undoableMeshCutter/undoableMeshCutter.H
  meshCut/refineCell/refineCell.H
  meshCut/splitCell/splitCell.H
  meshCut/wallLayerCells/wallLayerCells.H
  meshCut/wallLayerCells/wallNormalInfo/wallNormalInfo.H
  meshCut/wallLayerCells/wallNormalInfo/wallNormalInfoI.H
  motionSmoother/badQualityToCell/badQualityToCell.H
  motionSmoother/badQualityToFace/badQualityToFace.H
  motionSmoother/dynamicMeshCheck/dynamicMeshCheck.H
  motionSmoother/motionSmoother.H
  motionSmoother/motionSmootherAlgo.H
  motionSmoother/motionSmootherData.H
  motionSolvers/componentDisplacement/componentDisplacementMotionSolver.H
  motionSolvers/componentVelocity/componentVelocityMotionSolver.H
  motionSolvers/displacement/displacement/displacementMotionSolver.H
  motionSolvers/displacement/layeredSolver/displacementLayeredMotionMotionSolver.H
  motionSolvers/displacement/layeredSolver/pointEdgeStructuredWalk.H
  motionSolvers/displacement/layeredSolver/pointEdgeStructuredWalkI.H
  motionSolvers/displacement/linearSolver/displacementLinearMotionMotionSolver.H
  motionSolvers/displacement/points0/points0MotionSolver.H
  motionSolvers/displacement/solidBody/interpolatingSolidBodyMotionSolver/interpolatingSolidBodyMotionSolver.H
  motionSolvers/displacement/solidBody/multiSolidBodyMotionSolver/multiSolidBodyMotionSolver.H
  motionSolvers/displacement/solidBody/pointPatchFields/derived/solidBodyMotionDisplacement/solidBodyMotionDisplacementPointPatchVectorField.H
  motionSolvers/displacement/solidBody/solidBodyMotionFunctions/SDA/SDA.H
  motionSolvers/displacement/solidBody/solidBodyMotionFunctions/axisRotationMotion/axisRotationMotion.H
  motionSolvers/displacement/solidBody/solidBodyMotionFunctions/linearMotion/linearMotion.H
  motionSolvers/displacement/solidBody/solidBodyMotionFunctions/multiMotion/multiMotion.H
  motionSolvers/displacement/solidBody/solidBodyMotionFunctions/oscillatingLinearMotion/oscillatingLinearMotion.H
  motionSolvers/displacement/solidBody/solidBodyMotionFunctions/oscillatingRotatingMotion/oscillatingRotatingMotion.H
  motionSolvers/displacement/solidBody/solidBodyMotionFunctions/rotatingMotion/rotatingMotion.H
  motionSolvers/displacement/solidBody/solidBodyMotionFunctions/sixDoFMotion/sixDoFMotion.H
  motionSolvers/displacement/solidBody/solidBodyMotionFunctions/solidBodyMotionFunction/solidBodyMotionFunction.H
  motionSolvers/displacement/solidBody/solidBodyMotionSolver/solidBodyMotionSolver.H
  motionSolvers/motionSolver/motionSolver.H
  motionSolvers/motionSolverList/motionSolverList.H
  motionSolvers/velocity/velocityMotionSolver.H
  perfectInterface/perfectInterface.H
  pointInterpolator/dynamicMeshPointInterpolator.H
  pointPatchDist/externalPointEdgePoint.H
  pointPatchDist/externalPointEdgePointI.H
  pointPatchDist/pointPatchDist.H
  polyMeshAdder/faceCoupleInfo.H
  polyMeshAdder/polyMeshAdder.H
  polyMeshFilter/polyMeshFilter.H
  polyMeshFilter/polyMeshFilterSettings.H
  polyMeshFilter/polyMeshFilterSettingsI.H
  polyTopoChange/attachPolyTopoChanger/attachPolyTopoChanger.H
  polyTopoChange/polyMeshModifier/polyMeshModifier.H
  polyTopoChange/polyTopoChange/addObject/polyAddCell.H
  polyTopoChange/polyTopoChange/addObject/polyAddFace.H
  polyTopoChange/polyTopoChange/addObject/polyAddPoint.H
  polyTopoChange/polyTopoChange/addPatchCellLayer.H
  polyTopoChange/polyTopoChange/combineFaces.H
  polyTopoChange/polyTopoChange/duplicatePoints.H
  polyTopoChange/polyTopoChange/edgeCollapser.H
  polyTopoChange/polyTopoChange/faceCollapser.H
  polyTopoChange/polyTopoChange/hexRef8/hexRef8.H
  polyTopoChange/polyTopoChange/hexRef8/hexRef8Data.H
  polyTopoChange/polyTopoChange/hexRef8/refinementHistory.H
  polyTopoChange/polyTopoChange/modifyObject/polyModifyCell.H
  polyTopoChange/polyTopoChange/modifyObject/polyModifyFace.H
  polyTopoChange/polyTopoChange/modifyObject/polyModifyPoint.H
  polyTopoChange/polyTopoChange/pointEdgeCollapse/pointEdgeCollapse.H
  polyTopoChange/polyTopoChange/pointEdgeCollapse/pointEdgeCollapseI.H
  polyTopoChange/polyTopoChange/polyTopoChange.H
  polyTopoChange/polyTopoChange/polyTopoChangeI.H
  polyTopoChange/polyTopoChange/refinementData.H
  polyTopoChange/polyTopoChange/refinementDataI.H
  polyTopoChange/polyTopoChange/refinementDistanceData.H
  polyTopoChange/polyTopoChange/refinementDistanceDataI.H
  polyTopoChange/polyTopoChange/removeCells.H
  polyTopoChange/polyTopoChange/removeFaces.H
  polyTopoChange/polyTopoChange/removeObject/polyRemoveCell.H
  polyTopoChange/polyTopoChange/removeObject/polyRemoveFace.H
  polyTopoChange/polyTopoChange/removeObject/polyRemovePoint.H
  polyTopoChange/polyTopoChange/removePoints.H
  polyTopoChange/polyTopoChange/tetDecomposer.H
  polyTopoChange/polyTopoChange/topoAction/topoAction.H
  polyTopoChange/polyTopoChanger/polyTopoChanger.H
  polyTopoChange/repatchPolyTopoChanger/repatchPolyTopoChanger.H
  repatchMesh/repatchMesh.H
  repatchMesh/repatchPatch.H
  slidingInterface/enrichedPatch/enrichedPatch.H
  slidingInterface/slidingInterface.H
)
install( TARGETS dynamicMesh )
