add_library( fvModels )
target_link_libraries( fvModels
  PRIVATE
  OpenFOAM
  compressibleMomentumTransportModels
  finiteVolume
  fluidThermophysicalModels
  fluidThermophysicalTransportModel
  fluidThermoThermophysicalTransportModels
  #momentumTransportModels
  solidThermo
  thermophysicalTransportModel
)
target_include_directories( fvModels
  PUBLIC
  .
)
target_sources( fvModels
  PRIVATE
  derived/accelerationSource/accelerationSource.C
  derived/actuationDiskSource/actuationDiskSource.C
  derived/buoyancyEnergy/buoyancyEnergy.C
  derived/buoyancyForce/buoyancyForce.C
  derived/effectivenessHeatExchangerSource/effectivenessHeatExchangerSource.C
  derived/explicitPorositySource/explicitPorositySource.C
  derived/heatSource/heatSource.C
  derived/heatTransfer/heatTransfer.C
  derived/heatTransfer/heatTransferAv/heatTransferAv.C
  derived/heatTransfer/heatTransferCoefficientModels/constant/constant.C
  derived/heatTransfer/heatTransferCoefficientModels/function1/function1.C
  derived/heatTransfer/heatTransferCoefficientModels/function2/function2.C
  derived/heatTransfer/heatTransferCoefficientModels/heatTransferCoefficientModel/heatTransferCoefficientModel.C
  derived/heatTransfer/heatTransferCoefficientModels/variable/variable.C
  derived/massSource/massSource.C
  derived/phaseLimitStabilisation/phaseLimitStabilisation.C
  derived/radialActuationDiskSource/radialActuationDiskSource.C
  derived/rotorDiskSource/bladeModel/bladeModel.C
  derived/rotorDiskSource/profileModel/lookup/lookupProfile.C
  derived/rotorDiskSource/profileModel/profileModel.C
  derived/rotorDiskSource/profileModel/profileModelList.C
  derived/rotorDiskSource/profileModel/series/seriesProfile.C
  derived/rotorDiskSource/rotorDiskSource.C
  derived/rotorDiskSource/trimModel/fixed/fixedTrim.C
  derived/rotorDiskSource/trimModel/targetCoeff/targetCoeffTrim.C
  derived/rotorDiskSource/trimModel/trimModel/trimModel.C
  derived/rotorDiskSource/trimModel/trimModel/trimModelNew.C
  derived/sixDoFAccelerationSource/sixDoFAccelerationSource.C
  derived/solidEquilibriumEnergySource/solidEquilibriumEnergySource.C
  derived/solidificationMeltingSource/solidificationMeltingSource.C
  derived/volumeFractionSource/volumeFractionSource.C
  derived/zeroDimensionalMassSource/zeroDimensionalMassSource.C
  general/codedFvModel/codedFvModel.C
  general/semiImplicitSource/semiImplicitSource.C
  interRegion/interRegionExplicitPorositySource/interRegionExplicitPorositySource.C
  interRegion/interRegionHeatTransfer/interRegionHeatTransfer.C
  interRegion/interRegionModel/interRegionModel.C

  PRIVATE
  FILE_SET HEADERS
  FILES
  derived/accelerationSource/accelerationSource.H
  derived/actuationDiskSource/actuationDiskSource.H
  derived/buoyancyEnergy/buoyancyEnergy.H
  derived/buoyancyForce/buoyancyForce.H
  derived/effectivenessHeatExchangerSource/effectivenessHeatExchangerSource.H
  derived/explicitPorositySource/explicitPorositySource.H
  derived/heatSource/heatSource.H
  derived/heatTransfer/heatTransfer.H
  derived/heatTransfer/heatTransferAv/heatTransferAv.H
  derived/heatTransfer/heatTransferCoefficientModels/constant/constant.H
  derived/heatTransfer/heatTransferCoefficientModels/function1/function1.H
  derived/heatTransfer/heatTransferCoefficientModels/function2/function2.H
  derived/heatTransfer/heatTransferCoefficientModels/heatTransferCoefficientModel/heatTransferCoefficientModel.H
  derived/heatTransfer/heatTransferCoefficientModels/variable/variable.H
  derived/massSource/massSource.H
  derived/phaseLimitStabilisation/phaseLimitStabilisation.H
  derived/radialActuationDiskSource/radialActuationDiskSource.H
  derived/rotorDiskSource/bladeModel/bladeModel.H
  derived/rotorDiskSource/profileModel/lookup/lookupProfile.H
  derived/rotorDiskSource/profileModel/profileModel.H
  derived/rotorDiskSource/profileModel/profileModelList.H
  derived/rotorDiskSource/profileModel/series/seriesProfile.H
  derived/rotorDiskSource/rotorDiskSource.H
  derived/rotorDiskSource/rotorDiskSourceI.H
  derived/rotorDiskSource/trimModel/fixed/fixedTrim.H
  derived/rotorDiskSource/trimModel/targetCoeff/targetCoeffTrim.H
  derived/rotorDiskSource/trimModel/trimModel/trimModel.H
  derived/sixDoFAccelerationSource/sixDoFAccelerationSource.H
  derived/solidEquilibriumEnergySource/solidEquilibriumEnergySource.H
  derived/solidificationMeltingSource/solidificationMeltingSource.H
  derived/volumeFractionSource/volumeFractionSource.H
  derived/zeroDimensionalMassSource/zeroDimensionalMassSource.H
  general/codedFvModel/codedFvModel.H
  general/semiImplicitSource/semiImplicitSource.H
  interRegion/interRegionExplicitPorositySource/interRegionExplicitPorositySource.H
  interRegion/interRegionHeatTransfer/interRegionHeatTransfer.H
  interRegion/interRegionModel/interRegionModel.H
  interRegion/interRegionModel/interRegionModelI.H
)
install( TARGETS fvModels )
